Refactor-Prisma-Schema

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:rasooliemad@db.dovzbxsobiqfbveiyvvf.supabase.co:5432/postgres"
+DIRECT_URL="postgresql://postgres.dovzbxsobiqfbveiyvvf:rasooliemad@aws-0-us-west-1.pooler.supabase.com:5432/postgres"
 NEXTAUTH_SECRET="WOGGugxKxBr4IyPq9Gp2uGRW6e5Ad8mVONVHe4tKkjI="   
 NEXTAUTH_URL="http://localhost:3000"         
 
