--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
